--- a/code/style.responsive.css
+++ b/code/style.responsive.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-start;
-  height: 534px;
+  height: 71.2vw;
 }
 .bd {
   display: flex;
@@ -11,24 +11,24 @@
   align-items: flex-start;
   flex-direction: row;
   opacity: 1;
-  width: 342px;
-  height: 342px;
+  width: 45.6vw;
+  height: 45.6vw;
 }
 .layer {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 342px;
-  height: 342px;
+  top: 0vw;
+  left: 0vw;
+  width: 45.6vw;
+  height: 45.6vw;
   overflow: hidden;
 }
 .bg {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0vw;
+  left: 0vw;
   opacity: 1;
-  width: 342px;
-  height: 342px;
+  width: 45.6vw;
+  height: 45.6vw;
 }
 .wrap {
   box-sizing: border-box;
@@ -36,26 +36,26 @@
   position: relative;
   align-items: center;
   flex-direction: row;
-  margin-top: 18px;
-  margin-left: 18px;
-  border-radius: 15px;
+  margin-top: 2.4vw;
+  margin-left: 2.4vw;
+  border-radius: 2vw;
   background-color: rgba(0, 0, 0, 0.4);
-  padding-right: 9px;
-  padding-left: 10px;
-  height: 30px;
+  padding-right: 1.2vw;
+  padding-left: 1.33vw;
+  height: 4vw;
 }
 .riverdinwei {
   opacity: 1;
-  width: 14px;
-  height: 18px;
+  width: 1.87vw;
+  height: 2.4vw;
 }
 .distance {
-  margin-left: 4px;
-  height: 22px;
+  margin-left: 0.53vw;
+  height: 2.93vw;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 2.4vw;
   color: #ffffff;
-  line-height: 22px;
+  line-height: 2.93vw;
   white-space: nowrap;
 }
 .main {
@@ -64,17 +64,17 @@
   flex-direction: row;
   justify-content: center;
   background-color: #ffffff;
-  width: 342px;
-  height: 114px;
+  width: 45.6vw;
+  height: 15.2vw;
 }
 .title {
-  margin-top: 22px;
-  width: 300px;
-  height: 88px;
+  margin-top: 2.93vw;
+  width: 40vw;
+  height: 11.73vw;
   font-weight: 400;
-  font-size: 30px;
+  font-size: 4vw;
   color: #333333;
-  line-height: 44px;
+  line-height: 5.87vw;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -84,50 +84,50 @@
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 1.6vw;
+  border-bottom-right-radius: 1.6vw;
   background-color: #ffffff;
-  padding-right: 17px;
-  padding-left: 18px;
-  width: 342px;
-  height: 78px;
+  padding-right: 2.27vw;
+  padding-left: 2.4vw;
+  width: 45.6vw;
+  height: 10.4vw;
   overflow: hidden;
 }
 .block {
   display: flex;
   align-items: center;
   flex-direction: row;
-  height: 30px;
+  height: 4vw;
 }
 .xianjin {
-  width: 30px;
-  height: 30px;
+  width: 4vw;
+  height: 4vw;
 }
 .fashionHome {
-  margin-left: 6px;
-  height: 28px;
+  margin-left: 0.8vw;
+  height: 3.73vw;
   font-weight: 300;
-  font-size: 24px;
+  font-size: 3.2vw;
   color: #666666;
-  line-height: 28px;
+  line-height: 3.73vw;
   white-space: nowrap;
 }
 .group {
   display: flex;
   align-items: center;
   flex-direction: row;
-  height: 30px;
+  height: 4vw;
 }
 .favorite {
-  width: 22px;
-  height: 22px;
+  width: 2.93vw;
+  height: 2.93vw;
 }
 .num {
-  margin-left: 5px;
-  height: 26px;
+  margin-left: 0.67vw;
+  height: 3.47vw;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 2.93vw;
   color: #999999;
-  line-height: 26px;
+  line-height: 3.47vw;
   white-space: nowrap;
 }
