--- a/code/style.css
+++ b/code/style.css
@@ -1,133 +1,163 @@
-.box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
-  height: 534px;
+.mod {
+  align-items: center;
+  width: 717px;
+  height: 908px;
 }
-.bd {
-  display: flex;
+.row-i0 {
   position: relative;
   align-items: flex-start;
-  flex-direction: row;
-  opacity: 1;
-  width: 342px;
-  height: 342px;
+  justify-content: center;
+  border-radius: 24px;
+  background-color: #ffffff;
+  width: 714px;
+  height: 295px;
 }
-.layer {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 342px;
-  height: 342px;
+.item-wrapper {
+  align-items: center;
+  margin-top: 18px;
+  margin-right: 18px;
+  border-radius: 12px;
+  background-color: #ffffff;
+  height: 260px;
   overflow: hidden;
 }
-.bg {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  opacity: 1;
-  width: 342px;
-  height: 342px;
+.item {
+  margin-left: 7px;
+  width: 253px;
+  height: 242px;
 }
-.wrap {
-  box-sizing: border-box;
-  display: flex;
-  position: relative;
-  align-items: center;
-  flex-direction: row;
-  margin-top: 18px;
-  margin-left: 18px;
-  border-radius: 15px;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding-right: 9px;
-  padding-left: 10px;
-  height: 30px;
-}
-.riverdinwei {
-  opacity: 1;
-  width: 14px;
-  height: 18px;
-}
-.distance {
-  margin-left: 4px;
-  height: 22px;
-  font-weight: 400;
-  font-size: 18px;
-  color: #ffffff;
-  line-height: 22px;
-  white-space: nowrap;
-}
-.main {
-  display: flex;
+.wrapper {
   align-items: flex-start;
-  flex-direction: row;
-  justify-content: center;
-  background-color: #ffffff;
-  width: 342px;
-  height: 114px;
+  margin-top: 34px;
+  margin-right: 1px;
+  white-space: nowrap;
 }
 .title {
-  margin-top: 22px;
-  width: 300px;
-  height: 88px;
-  font-weight: 400;
-  font-size: 30px;
-  color: #333333;
-  line-height: 44px;
+  position: relative;
+  max-width: 244px;
+  height: 34px;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: 34px;
+  color: #111111;
+  font-family: PingFang SC;
+  font-size: 30px;
+  font-weight: 500;
 }
-.ft {
+.button-wrapper {
   box-sizing: border-box;
-  display: flex;
+  position: relative;
   align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-  background-color: #ffffff;
-  padding-right: 17px;
-  padding-left: 18px;
-  width: 342px;
-  height: 78px;
-  overflow: hidden;
+  margin-top: 10px;
+  border-radius: 4px;
+  background-image: linear-gradient(270deg, #ffedd4 100%, #ffdea5 0%);
+  padding-right: 9px;
+  padding-left: 8px;
+  height: 36px;
+  line-height: 24px;
+  white-space: pre;
 }
-.block {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  height: 30px;
-}
-.xianjin {
-  width: 30px;
-  height: 30px;
-}
-.fashionHome {
-  margin-left: 6px;
-  height: 28px;
-  font-weight: 300;
+.button {
+  color: #a34b1d;
+  font-family: PingFang SC;
   font-size: 24px;
-  color: #666666;
+  font-weight: 400;
+}
+.tag {
+  position: relative;
+  margin-top: 10px;
+  margin-left: 2px;
+  max-width: 240px;
+  height: 28px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   line-height: 28px;
-  white-space: nowrap;
+  color: #999999;
+  font-family: PingFang SC;
+  font-size: 24px;
+  font-weight: 400;
+}
+.wrapper-inner {
+  position: relative;
+  align-items: flex-start;
+  margin-top: 48px;
+  background-size: contain;
+  background-image: url(https://img.alicdn.com/imgextra/i2/O1CN01DEE6Gm1xVEXiSUpHD_!!6000000006448-2-tps-490-156.png);
+  width: 244px;
+  height: 78px;
+  line-height: 24px;
+}
+.price-wrapper {
+  position: relative;
+  align-items: center;
+  margin-top: 4px;
+  margin-left: 12px;
+  height: 40px;
+  font-weight: 600;
+}
+.label {
+  margin-top: 4px;
+  color: #ffffff;
+  font-family: PingFang SC;
+  font-size: 24px;
+}
+.yuan {
+  margin-top: 8px;
+  margin-right: -2px;
+  color: #ffffff;
+  font-family: PingFang SC;
+  font-size: 24px;
+}
+.price {
+  line-height: 36px;
+  color: #ffffff;
+  font-family: PingFang SC;
+  font-size: 36px;
 }
 .group {
-  display: flex;
+  position: relative;
   align-items: center;
-  flex-direction: row;
-  height: 30px;
+  margin-top: -2px;
+  margin-left: 12px;
 }
-.favorite {
-  width: 22px;
-  height: 22px;
-}
-.num {
-  margin-left: 5px;
-  height: 26px;
+.money-info {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: PingFang SC;
+  font-size: 24px;
   font-weight: 400;
-  font-size: 22px;
-  color: #999999;
-  line-height: 26px;
+}
+.money {
+  text-decoration: line-through;
+  color: rgba(255, 255, 255, 0.8);
+  font-family: PingFang SC;
+  font-size: 24px;
+  font-weight: 400;
+}
+.wrapper-1 {
+  position: relative;
+  align-items: flex-start;
+  justify-content: center;
+  margin-top: 200px;
+  width: 154px;
+  height: 78px;
+}
+.shop-logo {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 154px;
+  height: 78px;
+}
+.caption {
+  position: relative;
+  margin-top: 19px;
+  max-width: 142px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
+  text-shadow: 0px 2px 4px rgba(255, 219, 60, 1);
+  color: #ff2d00;
+  font-family: PingFang SC;
+  font-size: 34px;
+  font-weight: 400;
 }
