--- a/code/style.responsive.css
+++ b/code/style.responsive.css
@@ -1,133 +1,163 @@
-.box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
-  height: 71.2vw;
+.mod {
+  align-items: center;
+  width: 95.6vw;
+  height: 121.07vw;
 }
-.bd {
-  display: flex;
+.row-i0 {
   position: relative;
   align-items: flex-start;
-  flex-direction: row;
-  opacity: 1;
-  width: 45.6vw;
-  height: 45.6vw;
+  justify-content: center;
+  border-radius: 3.2vw;
+  background-color: #ffffff;
+  width: 95.2vw;
+  height: 39.33vw;
 }
-.layer {
-  position: absolute;
-  top: 0vw;
-  left: 0vw;
-  width: 45.6vw;
-  height: 45.6vw;
+.item-wrapper {
+  align-items: center;
+  margin-top: 2.4vw;
+  margin-right: 2.4vw;
+  border-radius: 1.6vw;
+  background-color: #ffffff;
+  height: 34.67vw;
   overflow: hidden;
 }
-.bg {
-  position: absolute;
-  top: 0vw;
-  left: 0vw;
-  opacity: 1;
-  width: 45.6vw;
-  height: 45.6vw;
+.item {
+  margin-left: 0.93vw;
+  width: 33.73vw;
+  height: 32.27vw;
 }
-.wrap {
-  box-sizing: border-box;
-  display: flex;
-  position: relative;
-  align-items: center;
-  flex-direction: row;
-  margin-top: 2.4vw;
-  margin-left: 2.4vw;
-  border-radius: 2vw;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding-right: 1.2vw;
-  padding-left: 1.33vw;
-  height: 4vw;
-}
-.riverdinwei {
-  opacity: 1;
-  width: 1.87vw;
-  height: 2.4vw;
-}
-.distance {
-  margin-left: 0.53vw;
-  height: 2.93vw;
-  font-weight: 400;
-  font-size: 2.4vw;
-  color: #ffffff;
-  line-height: 2.93vw;
-  white-space: nowrap;
-}
-.main {
-  display: flex;
+.wrapper {
   align-items: flex-start;
-  flex-direction: row;
-  justify-content: center;
-  background-color: #ffffff;
-  width: 45.6vw;
-  height: 15.2vw;
+  margin-top: 4.53vw;
+  margin-right: 0.13vw;
+  white-space: nowrap;
 }
 .title {
-  margin-top: 2.93vw;
-  width: 40vw;
-  height: 11.73vw;
-  font-weight: 400;
-  font-size: 4vw;
-  color: #333333;
-  line-height: 5.87vw;
+  position: relative;
+  max-width: 32.53vw;
+  height: 4.53vw;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: 4.53vw;
+  color: #111111;
+  font-family: PingFang SC;
+  font-size: 4vw;
+  font-weight: 500;
 }
-.ft {
+.button-wrapper {
   box-sizing: border-box;
-  display: flex;
+  position: relative;
   align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  border-bottom-left-radius: 1.6vw;
-  border-bottom-right-radius: 1.6vw;
-  background-color: #ffffff;
-  padding-right: 2.27vw;
-  padding-left: 2.4vw;
-  width: 45.6vw;
-  height: 10.4vw;
-  overflow: hidden;
+  margin-top: 1.33vw;
+  border-radius: 0.53vw;
+  background-image: linear-gradient(270deg, #ffedd4 100%, #ffdea5 0%);
+  padding-right: 1.2vw;
+  padding-left: 1.07vw;
+  height: 4.8vw;
+  line-height: 3.2vw;
+  white-space: pre;
 }
-.block {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  height: 4vw;
-}
-.xianjin {
-  width: 4vw;
-  height: 4vw;
-}
-.fashionHome {
-  margin-left: 0.8vw;
-  height: 3.73vw;
-  font-weight: 300;
+.button {
+  color: #a34b1d;
+  font-family: PingFang SC;
   font-size: 3.2vw;
-  color: #666666;
+  font-weight: 400;
+}
+.tag {
+  position: relative;
+  margin-top: 1.33vw;
+  margin-left: 0.27vw;
+  max-width: 32vw;
+  height: 3.73vw;
+  overflow: hidden;
+  text-overflow: ellipsis;
   line-height: 3.73vw;
-  white-space: nowrap;
+  color: #999999;
+  font-family: PingFang SC;
+  font-size: 3.2vw;
+  font-weight: 400;
+}
+.wrapper-inner {
+  position: relative;
+  align-items: flex-start;
+  margin-top: 6.4vw;
+  background-size: contain;
+  background-image: url(https://img.alicdn.com/imgextra/i2/O1CN01DEE6Gm1xVEXiSUpHD_!!6000000006448-2-tps-490-156.png);
+  width: 32.53vw;
+  height: 10.4vw;
+  line-height: 3.2vw;
+}
+.price-wrapper {
+  position: relative;
+  align-items: center;
+  margin-top: 0.53vw;
+  margin-left: 1.6vw;
+  height: 5.33vw;
+  font-weight: 600;
+}
+.label {
+  margin-top: 0.53vw;
+  color: #ffffff;
+  font-family: PingFang SC;
+  font-size: 3.2vw;
+}
+.yuan {
+  margin-top: 1.07vw;
+  margin-right: -0.27vw;
+  color: #ffffff;
+  font-family: PingFang SC;
+  font-size: 3.2vw;
+}
+.price {
+  line-height: 4.8vw;
+  color: #ffffff;
+  font-family: PingFang SC;
+  font-size: 4.8vw;
 }
 .group {
-  display: flex;
+  position: relative;
   align-items: center;
-  flex-direction: row;
-  height: 4vw;
+  margin-top: -0.27vw;
+  margin-left: 1.6vw;
 }
-.favorite {
-  width: 2.93vw;
-  height: 2.93vw;
-}
-.num {
-  margin-left: 0.67vw;
-  height: 3.47vw;
+.money-info {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: PingFang SC;
+  font-size: 3.2vw;
   font-weight: 400;
-  font-size: 2.93vw;
-  color: #999999;
-  line-height: 3.47vw;
+}
+.money {
+  text-decoration: line-through;
+  color: rgba(255, 255, 255, 0.8);
+  font-family: PingFang SC;
+  font-size: 3.2vw;
+  font-weight: 400;
+}
+.wrapper-1 {
+  position: relative;
+  align-items: flex-start;
+  justify-content: center;
+  margin-top: 26.67vw;
+  width: 20.53vw;
+  height: 10.4vw;
+}
+.shop-logo {
+  position: absolute;
+  top: 0vw;
+  left: 0vw;
+  width: 20.53vw;
+  height: 10.4vw;
+}
+.caption {
+  position: relative;
+  margin-top: 2.53vw;
+  max-width: 18.93vw;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
+  text-shadow: 0px 2px 4px rgba(255, 219, 60, 1);
+  color: #ff2d00;
+  font-family: PingFang SC;
+  font-size: 4.53vw;
+  font-weight: 400;
 }
