--- a/code/style.responsive.css
+++ b/code/style.responsive.css
@@ -1,11 +1,15 @@
 .mod {
+  display: flex;
   align-items: center;
+  flex-direction: column;
   width: 95.6vw;
   height: 121.07vw;
 }
 .row-i0 {
+  display: flex;
   position: relative;
   align-items: flex-start;
+  flex-direction: row;
   justify-content: center;
   border-radius: 3.2vw;
   background-color: #ffffff;
@@ -13,7 +17,9 @@
   height: 39.33vw;
 }
 .item-wrapper {
+  display: flex;
   align-items: center;
+  flex-direction: row;
   margin-top: 2.4vw;
   margin-right: 2.4vw;
   border-radius: 1.6vw;
@@ -27,7 +33,9 @@
   height: 32.27vw;
 }
 .wrapper {
+  display: flex;
   align-items: flex-start;
+  flex-direction: column;
   margin-top: 4.53vw;
   margin-right: 0.13vw;
   white-space: nowrap;
@@ -46,8 +54,10 @@
 }
 .button-wrapper {
   box-sizing: border-box;
+  display: flex;
   position: relative;
   align-items: center;
+  flex-direction: row;
   margin-top: 1.33vw;
   border-radius: 0.53vw;
   background-image: linear-gradient(270deg, #ffedd4 100%, #ffdea5 0%);
@@ -78,8 +88,10 @@
   font-weight: 400;
 }
 .wrapper-inner {
+  display: flex;
   position: relative;
   align-items: flex-start;
+  flex-direction: column;
   margin-top: 6.4vw;
   background-size: contain;
   background-image: url(https://img.alicdn.com/imgextra/i2/O1CN01DEE6Gm1xVEXiSUpHD_!!6000000006448-2-tps-490-156.png);
@@ -88,8 +100,10 @@
   line-height: 3.2vw;
 }
 .price-wrapper {
+  display: flex;
   position: relative;
   align-items: center;
+  flex-direction: row;
   margin-top: 0.53vw;
   margin-left: 1.6vw;
   height: 5.33vw;
@@ -115,8 +129,10 @@
   font-size: 4.8vw;
 }
 .group {
+  display: flex;
   position: relative;
   align-items: center;
+  flex-direction: row;
   margin-top: -0.27vw;
   margin-left: 1.6vw;
 }
@@ -134,8 +150,10 @@
   font-weight: 400;
 }
 .wrapper-1 {
+  display: flex;
   position: relative;
   align-items: flex-start;
+  flex-direction: row;
   justify-content: center;
   margin-top: 26.67vw;
   width: 20.53vw;
